--- a/includes/_07_text.adoc
+++ b/includes/_07_text.adoc
@@ -8,7 +8,9 @@ Plain Text is data stored in {ascii-chars}[Ascii] format. It is more portable th
 
 === Rich Text
 
-Rich Text nodes have the same functionality as Plain Text and can also include text style, size, and color. In Cherrytree they also allow objects, such as images, codeboxes, and tables. (See link:#_objects[*8. Objects*] for more details.)
+Rich Text nodes have the same functionality as Plain Text and can also include text style, size, and color. In Cherrytree they also allow objects, such as images, codeboxes, and tables.
+ 
+NOTE: See link:#_objects[*8. Objects*] for more details.
 
 === Automatic Syntax Highlighting
 
@@ -21,7 +23,7 @@ Automatic syntax highlighting styles text with a readable color scheme that corr
 ==== Choosing a Language
 
 [start=1]
-. Open the node properties menu, shown in <<figure-6.03>>.
+. Open the node properties menu shown in <<figure-6.03>>.
 . Choose *Automatic Syntax Highlighting*.
 . Click the drop-down menu directly beneath the node type options.
 . Choose from the list of link:#_supported_languages[supported languages].
@@ -30,17 +32,19 @@ Automatic syntax highlighting styles text with a readable color scheme that corr
 
 Nodes set to automatic syntax highlighting can be executed from Cherrytree, assuming you have its assigned language installed to your machine. 
 
-*To execute a the node:*
+*To execute a node:*
 [start=1]
 . Click *File*, located in the link:#menu-bar[menu bar].
 . Click *Execute Code*.
 . When prompted, click *OK* to confirm that you want to execute the code.
 
-Some languages will require a command to be assigned to the language before the code can be executed, shown in <<figure-7.02>>. Please see link:#_plain_text_and_code[*9.4 Plain Text and Code*] for details on assigning a command.
+Some languages will require a command to be assigned to the language before the code can be executed. 
 
 [[figure-7.02]]
 .Figure 7.02
 {command-warning}
+
+See link:#_plain_text_and_code[*9.4 Plain Text and Code*] for details on assigning a command.
 
 ==== Supported Languages
 
@@ -149,7 +153,7 @@ Cherrytree provides editing functions which are available in the *Edit* menu, sh
 ** *Toggle Case of Selection/Word* - Converts every letter of the selected text to the opposite state of its current {letter-case}[case].
 * *Enable/Disable Spell Check* - Toggle Cherrytree's spellcheck feature.
 +
-NOTE: *Enchant* is required for this feature. Please install the this dependency if your application is built from source and you haven't already. See link:#_building_from_source[*3. Building from Source*] for instructions.
+NOTE: *Enchant* is required for this feature. Please install this dependency if your application is built from source and you haven't already. See link:#_building_from_source[*3. Building from Source*] for instructions.
 
 * *Cut as Plain Text* - Moves the selected text, deprived of any styles it may have, to your clipboard. The text can then be pasted elsewhere.
 * *Copy as Plain Text* - Copies the selected text, deprived of any styles it may have, to your clipboard. A copy of the text can then be pasted elsewhere.
@@ -163,7 +167,7 @@ NOTE: *Enchant* is required for this feature. Please install the this dependency
 
 === Formatting
 
-Most formatting options are only applicable to Rich Text documents and can be found in the *Formatting* menu. <<figure-7.04>> 
+Most formatting options are only applicable to Rich Text documents and can be found in the *Formatting* menu. 
 
 [[figure-7.04]]
 .Figure 7.04
@@ -175,9 +179,9 @@ Most formatting options are only applicable to Rich Text documents and can be fo
 
 ==== Color
 
-* *Text Color Foreground* -  Opens the *Pick a Color* menu, shown in <<figure-7.05>>. The chosen color will be applied to the selected text.
+* *Text Color Foreground* -  Opens the *Pick a Color* menu shown in <<figure-7.05>>. The chosen color will be applied to the selected text.
 
-* *Text Color Background* - Opens the *Pick a Color* menu, shown in <<figure-7.05>>. The chosen color will be applied to the background of selected text.
+* *Text Color Background* - Opens the *Pick a Color* menu shown in <<figure-7.05>>. The chosen color will be applied to the background of selected text.
 +
 [[figure-7.05]]
 .Figure 7.05
@@ -189,7 +193,7 @@ Most formatting options are only applicable to Rich Text documents and can be fo
 
 * *Toggle Italic Property* - Applies _Italics_ to the selected text.  
 
-* *Toggle Underline Property* - Applies pass:[<u>Underline</u>] the selected text.
+* *Toggle Underline Property* - Applies pass:[<u>Underline</u>] to the selected text.
 
 * *Toggle Strikethrough Property* - Applies [.strike]#Strikethrough# to the selected text.
 
@@ -229,7 +233,7 @@ NOTE: The background color of monospace text can be edited in the link:#rich-tex
 .Figure 7.08
 {bulllist}
 
-* *Set/Unset Numbered List* - Formats the selected lines into a numbered list, in which the items are ordered.
+* *Set/Unset Numbered List* - Formats the selected lines into a numbered list, in which the order of items has purpose.
 +
 [[figure-7.09]]
 .Figure 7.09
@@ -258,7 +262,7 @@ NOTE: The background color of monospace text can be edited in the link:#rich-tex
 
 === Search
 
-Cherrytree's search and replace features can be found in the *Search* menu. <<figure-7.12>>
+Cherrytree's search and replace features can be found in the *Search* menu. 
 
 [[figure-7.12]]
 .Figure 7.12
@@ -272,14 +276,14 @@ Cherrytree's search and replace features can be found in the *Search* menu. <<fi
 * *Find in Node Content* - Searches for a sequence of characters in the selected node's content.
 * *Find in All Nodes Contents* - Searches for a sequence of characters in the entire node tree.
 * *Find in Selected Node and Subnodes Contents* - Searches for a sequence of characters in the selected node and its {node-relations}[children].
-* *Find in Nodes Names and Tags* - Searches for a sequence of characters in the every node title and tag of the node tree.
+* *Find in Nodes Names and Tags* - Searches for a sequence of characters in the node title and tag of the node tree.
 +
 NOTE: See *Tags for Searching* in link:#_creating_nodes[*6.1 Creating Nodes*] for more detail.
 
 * *Find Again* - Find the next instance in the search results. 
 * *Find Back* - Find the previous instance in the search results. 
 +
-NOTE: *Find Again* and *Find Back* are only compatible with the *First From Selection* and *First in All Range* options, indicated in the next step.
+NOTE: *Find Again* and *Find Back* are only compatible with the *First From Selection* and *First in All Range* options, which are defined in the next step.
 
 . (*Optional*) Select any link:#_search_options[*Search Options*] that are applicable to your effort.
 . Enter characters that you desire to find into *Search For* and click *OK* to execute the search.
@@ -292,13 +296,13 @@ NOTE: *Find Again* and *Find Back* are only compatible with the *First From Sele
 * *Replace in Node Content* - Searches for a sequence of characters in the selected node's content and replaces them with the provided text.
 * *Replace in All Nodes Contents* - Searches for a sequence of characters in the entire node tree and replaces them with the provided text.
 * *Replace in Selected Node and Subnodes Contents* - Searches for a sequence of characters in the selected node and its {node-relations}[children], and replaces them with the provided text.
-* *Replace in Nodes Names and Tags* - Searches for a sequence of characters in the every node title and tag of the node tree, and replaces them with the provided tet..
+* *Replace in Nodes Names and Tags* - Searches for a sequence of characters in the every node title and tag of the node tree, and replaces them with the provided text.
 +
 NOTE: See *Tags for Searching* in link:#_creating_nodes[*6.1 Creating Nodes*] for more detail.
 
 * *Replace Again* - Find the next instance in the search results and replace it with the provided text.  
 +
-NOTE: *Replace Again* is only compatible with the *First From Selection* and *First in All Range* options, indicated in the next step.
+NOTE: *Replace Again* is only compatible with the *First From Selection* and *First in All Range* options, which are defined in the next step.
 
 . (*Optional*) Select any link:#_search_options[*Search Options*] that are applicable to your effort.
 . Enter characters to find into *Search For* and characters to replace in *Replace With*. 
@@ -331,7 +335,7 @@ NOTE: Learn more about regular expressions {regex-link}[here].
 ** *Close* - Closes the *Iterate Latest Find/Replace* menu.
 ** *Find Previous* - Find the previous instance of the searched term.
 ** *Find Next* - Find the next instance of the searched term.
-** *Replace* - Replace the current instance of the of the searched term with the replacement provided in *Step 3* of link:#_steps_to_search_and_replace[*Steps to Search and Replace*]. (Applicable only to link:#_search_and_replace[Search and Replace] features.)
+** *Replace* - Replace the current instance of the searched term with the replacement provided in *Step 3* of link:#_steps_to_search_and_replace[*Steps to Search and Replace*]. (Applicable only to link:#_search_and_replace[Search and Replace] features.)
 ** *Undo* - Undoes the most recent *Replace* execution.
 
 * *Time Filter* options will be available when searching across multiple nodes. Select any option(s) that correspond with your effort, and click the adjacent date(s) to edit its value:
