--- a/includes/_04_quickstart.adoc
+++ b/includes/_04_quickstart.adoc
@@ -11,7 +11,9 @@ This brief quick start guide covers the following material:
 
 === Interface
 
-Cherrytree's interface consists of four sections, highlighted in <<figure-4.01>>:
+// TODO: Highlight sections of the interface using colors AND numbers for better accessibility.
+
+Cherrytree's interface consists of four sections, highlighted in <<figure-4.01>>.
 
 [[figure-4.01]]
 .Figure 4.01
@@ -36,7 +38,7 @@ The menu bar contains the following menus:
 [[toolbar]]
 ==== Toolbar (Purple)
 
-The toolbar has many commonly used options for managing nodes, formatting text, and inserting objects.
+The toolbar contains options for managing nodes, formatting text, and inserting objects.
 
 [[tree-view]]
 ==== Tree View (Green)
@@ -50,7 +52,7 @@ The editor is used to read, write, edit, and delete notes. Click and hold the di
 
 ==== Interface Options
 
-Most interface options exist within the *View* menu. <<figure-4.02>>
+Most interface options exist within the *View* menu.
 
 [[figure-4.02]]
 .Figure 4.02
@@ -67,13 +69,13 @@ Cherrytree allows you to organize notes using a link:#_nodes[tree structure].
 ==== Creating Your First Node
 
 [start=1]
-. Click *Add Node*, shown in <<figure-4.04>>. within the toolbar. +
+. Click *Add Node* within the toolbar, shown in <<figure-4.04>>.
 +
 [[figure-4.04]]
 .Figure 4.04
 {tree-node-add}
 
-. Within *New Node Properties*, shown in <<figure-4.05>> give your node a name and select a node type, then click *OK*. If you're unsure which node type to use, please view link:#_text[7. Text] in this manual. +
+. Within *New Node Properties*, give your node a name and select a node type, then click *OK*. If you're unsure which node type to use, view link:#_text[*7. Text*] of this manual. 
 +
 [[figure-4.05]]
 .Figure 4.05
@@ -81,7 +83,7 @@ Cherrytree allows you to organize notes using a link:#_nodes[tree structure].
 
 ==== Node Menu
 
-Right-click a node to display a menu of the options available to it. <<figure-4.06>> +
+Right-click a node to display a menu of the options available to it.
 
 [[figure-4.06]]
 .Figure 4.06
@@ -89,14 +91,14 @@ Right-click a node to display a menu of the options available to it. <<figure-4.
 
 Commonly used options include:
 
-* *Add Node* - Create a node on the same level of hierarchy as your current node.
-* *Add SubNode* - Create a child node under the currently selected node.
+* *Add Node* - Create a node on the same hierarchical level as your selected node.
+* *Add SubNode* - Create a child node under the selected node.
 * *Change Node Properties* - Edit the settings of the current node.
-* *Delete Node* - Delete the currently selected node.
+* *Delete Node* - Delete the selected node.
 
 === Insert Objects
 
-Objects can be inserted from the menu bar under *Edit*, <<figure-4.07>>, or the toolbar, <<figure-4.08>>. 
+Objects can be inserted from the *Edit* menu or the link:#toolbar[toolbar].
 
 [[figure-4.07]]
 .Figure 4.07
@@ -106,7 +108,7 @@ Objects can be inserted from the menu bar under *Edit*, <<figure-4.07>>, or the 
 .Figure 4.08
 {insert-toolbar}
 
-The following objects can be inserted into Cherrytree documents:
+Cherrytree supports the following objects:
 
 * link:#_images[Image]
 * link:#_tables[Table]
@@ -122,21 +124,23 @@ The following objects can be inserted into Cherrytree documents:
 === Save Your Notes
 
 [start=1]
-. You can save your document with `CTRL`+`S` or clicking *File* within the menu bar and selecting *Save*, shown in <<figure-4.09>>. +
+. You can save your document with `CTRL`+`S` or by clicking *File* within the menu bar and selecting *Save*.
 +
-If you have previously saved the current document, you do not need to perform steps 2 and 3. +
+If you have previously saved the current document, you do not need to perform steps 2 and 3.
 +
 [[figure-4.09]]
 .Figure 4.09
 {save-menu}
 
-. If this is your first time saving the current document, you will be prompted to select a storage type, shown in <<figure-4.10>>. If you are unsure which type to select, please visit the link:#_storage_type[storage type section] for more details. +
+. If this is your first time saving the current document, select a storage type then click *OK*.
++
+NOTE: See link:#_storage_types[*Storage Types*] and link:#_password_protection[Password Protection].
 +
 [[figure-4.10]]
 .Figure 4.10
 {save-type}
 
-. After you have selected a type, give your document a name and select a folder to save it to. <<figure-4.11>> +
+. After you have selected a type, give your document a name and select a folder to save it to. 
 +
 [[figure-4.11]]
 .Figure 4.11
@@ -145,19 +149,19 @@ If you have previously saved the current document, you do not need to perform st
 === Export the Document
 
 [start=1]
-. To export your document, click *Export* within the menu bar and select a type of document type. <<figure-4.12>> +
+. To export your document, click *Export* within the menu bar and select a type of document type.
 +
 [[figure-4.12]]
 .Figure 4.12
 {export-menu}
 
-. When prompted, select the scope of content to be exported then click *OK*. <<figure-4.13>> +
+. When prompted, select the scope of content to be exported then click *OK*.
 +
 [[figure-4.13]]
 .Figure 4.13
 {export-scope}
 
-. After you have selected a type you will be prompted to give your document a name and select a folder to save it to. <<figure-4.14>> +
+. After you have selected a type you will be prompted to give your document a name and select a folder to save it to.
 +
 [[figure-4.14]]
 .Figure 4.14
